--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resto",
   "version": "1.0.0",
-  "description": "",
+  "description": "Playground for experimenting with Hypemedia driven APIs ",
   "main": "examples/apple-farm/app.js",
   "dependencies": {
     "data.either": "^1.4.0",
@@ -15,6 +15,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Srdjan",
+  "license": "MIT"
 }
