fixed tests in resource.js

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,11 +3,11 @@
 	"configurations": [
 		{
 			// Name of configuration; appears in the launch configuration drop down menu.
-			"name": "App.js",
+			"name": "Debug",
 			// Type of configuration. Possible values: "node", "mono".
 			"type": "node",
 			// Workspace relative or absolute path to the program.
-			"program": "${workspaceRoot}/examples/apple-farm/app.js",
+			"program": "${file}",
 			// Automatically stop program after launch.
 			"stopOnEntry": false,
 			// Command line arguments passed to the program.
