--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node ./src/server.js",
+    "test": "node ./tests/apple-tests.js"
   },
   "author": "Srdjan",
   "license": "MIT"
