--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "2.1.0",
   "description": "Playground for experimenting with Hypemedia driven APIs ",
   "main": "examples/apple-farm/app.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Srdjan/resto"
+  },
   "dependencies": {
     "data.either": "^1.4.0",
     "expect.js": "^0.3.1",
     "halson": "^2.3.1",
     "node-persist": "^0.0.11",
     "ramda": "^0.21.0",
+    "tcomb": "^3.2.5",
     "urlsafe-base64": "^1.0.0"
   },
   "devDependencies": {},
